--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -55,6 +55,6 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.json
+          files: coverage.lcov
           directory: ./coverage/
 
