--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: strobe
-description: Strobe contains implementation of the [Strobe protocol framework](https://strobe.sourceforge.io/).
-version: 1.0.3
+description: Strobe contains implementation of the Strobe protocol framework.
+version: 1.0.4
 repository: https://github.com/justkawal/strobe
 
 environment:
